--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -5,3 +5,23 @@
 .image-size {
   width: 40vw;
 }
+
+.bg-image {
+  background-image: url("https://images.unsplash.com/photo-1517457373958-b7bdd4587205?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  box-shadow: inset 0 0 0 1000px rgba(59, 75, 5, 0.3);
+}
+
+.light-font,
+.light-font:hover {
+  color: white;
+  text-shadow: 0 0 10px black;
+}
+
+.shadowed {
+  -webkit-filter: drop-shadow(5px 5px 5px #222);
+  filter: drop-shadow(5px 5px 5px #222);
+}
