--- a/src/css/SelectEvent.css
+++ b/src/css/SelectEvent.css
@@ -3,7 +3,8 @@
   background-color: white;
   color: #d4d1d2;
   border-radius: 50px;
-  margin-top: 2rem;
-  padding: 1rem;
-  border: 3px solid #efefef;
+  margin-top: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #efefef;
+  font-size: 1rem;
 }
